src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>gm_Department_Reference__c</fullName>
        <formula>gm_Department__r.Name</formula>
        <label>Department Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gm_Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Department Lookup for Contacts who are Staff</inlineHelpText>
        <label>Department</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipLabel>Staff</relationshipLabel>
        <relationshipName>ContactDepartment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gm_Related_User_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related User Record</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>